Fix R20 structural test for Android Java compatibility